changing the log level to ERROR to easeup on the logging noise

--- a/neo_settings.json
+++ b/neo_settings.json
@@ -79,7 +79,7 @@
   
 
   /* The log level we are using, can be: DEBUG, INFO, WARN, ERROR */
-  "loglevel": "INFO",
+  "loglevel": "ERROR",
 
   // restrict socket.io transport methods
   "socketTransportProtocols" : ['xhr-polling', 'jsonp-polling', 'htmlfile'],
